# TinyFed-sim-FLOWER

./: .gitignore  LICENSE  README.md  final_model.pt  pyproject.toml
models/: cnn.py
simulations/: client.py  server.py  strategy.py  task.py
