# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "TinyFed-sim"
version = "1.0.0"
description = "Simulating federated learning on lightweight devices, tracking performance to suit deployability on TinyML-class environments."
license = "Apache-2.0"
# Dependencies for your Flower App
dependencies = [
    "flwr[simulation]>=1.25.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.9.1",
    "torchvision==0.24.1",
    "numpy==2.4.0",
    "psutil==7.1.3"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "Sumaiya Salekin (modifying on top of flwrlabs)"

# Point to your ServerApp and ClientApp objects
[tool.flwr.app.components]
serverapp = "simulations.server:app"
clientapp = "simulations.client:app"

# Custom config values accessible via `context.run_config`
[tool.flwr.app.config]
num-server-rounds = 3 
fraction-train = 0.5
local-epochs = 1
lr = 0.01

# Default federation to use when running the app
[tool.flwr.federations]
default = "local-simulation"

# Local simulation federation with 10 virtual SuperNodes
[tool.flwr.federations.local-simulation]
options.num-supernodes = 10

# Remote federation example for use with SuperLink
[tool.flwr.federations.remote-federation]
address = "<SUPERLINK-ADDRESS>:<PORT>"
insecure = true  # Remove this line to enable TLS
# root-certificates = "<PATH/TO/ca.crt>"  # For TLS setup
